--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -136,6 +136,7 @@ allow 15.204.238.148;
 allow 154.16.116.61;
 allow 154.213.185.133;
 allow 154.213.185.165;
+allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
@@ -193,7 +194,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.97.114.182;
 allow 176.97.114.202;
-allow 177.149.129.27;
+allow 177.149.155.108;
 allow 178.17.170.144;
 allow 178.17.170.23;
 allow 178.17.171.102;
@@ -269,6 +270,7 @@ allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -625,7 +627,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.90;
+allow 195.47.238.89;
 allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -907,6 +909,7 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
+allow 217.64.151.21;
 allow 217.79.189.239;
 allow 23.129.64.131;
 allow 23.129.64.132;
@@ -1353,6 +1356,7 @@ allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
+allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
@@ -1553,13 +1557,14 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
+allow 2a0d:bbc7:0:1::361;
 allow 2a0d:bbc7:0:1::394;
 allow 2a0d:c2c0:1:4::2;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1605,6 +1610,7 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
+allow 2a10:1fc0:10::c5e8:64c6;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1676,6 +1682,7 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1728,6 +1735,8 @@ allow 45.80.158.23;
 allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
+allow 45.84.107.108;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1848,6 +1857,7 @@ allow 84.239.46.144;
 allow 84.247.165.51;
 allow 85.158.108.52;
 allow 85.239.41.130;
+allow 85.239.55.217;
 allow 85.93.218.204;
 allow 87.106.98.81;
 allow 87.118.110.27;
