--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -136,6 +136,7 @@ deny 15.204.238.148;
 deny 154.16.116.61;
 deny 154.213.185.133;
 deny 154.213.185.165;
+deny 154.213.185.183;
 deny 154.213.185.185;
 deny 154.213.185.230;
 deny 154.213.185.254;
@@ -193,7 +194,7 @@ deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.97.114.182;
 deny 176.97.114.202;
-deny 177.149.129.27;
+deny 177.149.155.108;
 deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
@@ -269,6 +270,7 @@ deny 185.146.232.234;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.14;
 deny 185.165.171.84;
 deny 185.170.114.25;
@@ -625,7 +627,7 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.90;
+deny 195.47.238.89;
 deny 195.47.238.91;
 deny 195.80.151.242;
 deny 195.88.74.206;
@@ -907,6 +909,7 @@ deny 216.239.90.19;
 deny 216.73.159.101;
 deny 216.73.159.75;
 deny 217.12.221.131;
+deny 217.64.151.21;
 deny 217.79.189.239;
 deny 23.129.64.131;
 deny 23.129.64.132;
@@ -1353,6 +1356,7 @@ deny 2a05:541:112:31::1;
 deny 2a05:541:121:33::1;
 deny 2a05:541:122:49::1;
 deny 2a05:b0c7:6388::1;
+deny 2a05:b0c7:67c6::1;
 deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1280:bee1:2::ee12:230;
@@ -1553,13 +1557,14 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
 deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
+deny 2a0d:bbc7:0:1::361;
 deny 2a0d:bbc7:0:1::394;
 deny 2a0d:c2c0:1:4::2;
 deny 2a0e:4005:1002:ffff:185:40:4:100;
@@ -1605,6 +1610,7 @@ deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
+deny 2a10:1fc0:10::c5e8:64c6;
 deny 2a10:c800:1:9cc6::1;
 deny 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1676,6 +1682,7 @@ deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
+deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
@@ -1728,6 +1735,8 @@ deny 45.80.158.23;
 deny 45.80.158.27;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
+deny 45.84.107.108;
 deny 45.84.107.182;
 deny 45.84.107.198;
 deny 45.84.107.76;
@@ -1848,6 +1857,7 @@ deny 84.239.46.144;
 deny 84.247.165.51;
 deny 85.158.108.52;
 deny 85.239.41.130;
+deny 85.239.55.217;
 deny 85.93.218.204;
 deny 87.106.98.81;
 deny 87.118.110.27;
