--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -390,6 +390,7 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe96:7671;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
+allow 2a02:29b8:dc01:3750::b94;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
