Update lists at 20241126-1800

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -191,10 +191,8 @@ deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.227.215.50;
 deny 176.58.100.98;
-deny 176.58.121.177;
 deny 176.97.114.182;
 deny 176.97.114.202;
-deny 177.149.155.108;
 deny 178.17.170.144;
 deny 178.17.170.23;
 deny 178.17.171.102;
@@ -330,7 +328,6 @@ deny 185.220.101.129;
 deny 185.220.101.13;
 deny 185.220.101.130;
 deny 185.220.101.131;
-deny 185.220.101.132;
 deny 185.220.101.134;
 deny 185.220.101.135;
 deny 185.220.101.136;
@@ -627,7 +624,7 @@ deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
 deny 195.47.238.89;
-deny 195.47.238.91;
+deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -958,7 +955,6 @@ deny 23.137.248.149;
 deny 23.137.248.152;
 deny 23.137.250.83;
 deny 23.137.253.108;
-deny 23.137.253.109;
 deny 23.137.253.27;
 deny 23.153.248.33;
 deny 23.153.248.34;
@@ -1023,7 +1019,6 @@ deny 2602:fc24:12:4870:39ca:318:0:1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
 deny 2602:fc24:18:f38f::1;
-deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:30::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::a;
@@ -1280,7 +1275,6 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
-deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe96:7671;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
@@ -1413,7 +1407,6 @@ deny 2a0b:f4c2::11;
 deny 2a0b:f4c2:1::128;
 deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
-deny 2a0b:f4c2:1::132;
 deny 2a0b:f4c2:1::134;
 deny 2a0b:f4c2:1::135;
 deny 2a0b:f4c2:1::137;
@@ -1557,7 +1550,7 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
@@ -1683,6 +1676,7 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.247;
+deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
