Update lists at 20241126-2100

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -191,6 +191,7 @@ deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.227.215.50;
 deny 176.58.100.98;
+deny 176.58.121.177;
 deny 176.97.114.182;
 deny 176.97.114.202;
 deny 178.17.170.144;
@@ -267,7 +268,6 @@ deny 185.146.232.234;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.14;
 deny 185.165.171.84;
 deny 185.170.114.25;
@@ -353,12 +353,10 @@ deny 185.220.101.161;
 deny 185.220.101.162;
 deny 185.220.101.163;
 deny 185.220.101.164;
-deny 185.220.101.165;
 deny 185.220.101.168;
 deny 185.220.101.169;
 deny 185.220.101.17;
 deny 185.220.101.170;
-deny 185.220.101.171;
 deny 185.220.101.172;
 deny 185.220.101.173;
 deny 185.220.101.174;
@@ -623,7 +621,7 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.89;
+deny 195.47.238.92;
 deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
@@ -953,6 +951,7 @@ deny 23.129.64.230;
 deny 23.137.248.100;
 deny 23.137.248.149;
 deny 23.137.248.152;
+deny 23.137.249.195;
 deny 23.137.250.83;
 deny 23.137.253.108;
 deny 23.137.253.27;
@@ -1014,6 +1013,7 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
+deny 2602:fc24:11:ca18::1;
 deny 2602:fc24:12:3f11:39ca:318:0:1;
 deny 2602:fc24:12:4870:39ca:318:0:1;
 deny 2602:fc24:12:81a6::1;
@@ -1275,6 +1275,7 @@ deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a01:7e01::f03c:95ff:fe96:7671;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
@@ -1428,11 +1429,9 @@ deny 2a0b:f4c2:1::161;
 deny 2a0b:f4c2:1::162;
 deny 2a0b:f4c2:1::163;
 deny 2a0b:f4c2:1::164;
-deny 2a0b:f4c2:1::165;
 deny 2a0b:f4c2:1::168;
 deny 2a0b:f4c2:1::169;
 deny 2a0b:f4c2:1::170;
-deny 2a0b:f4c2:1::171;
 deny 2a0b:f4c2:1::172;
 deny 2a0b:f4c2:1::173;
 deny 2a0b:f4c2:1::174;
@@ -1550,8 +1549,8 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
@@ -1768,7 +1767,6 @@ deny 51.89.153.112;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
-deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
