--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -191,6 +191,7 @@ set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.227.215.50;
 set_real_ip_from 176.58.100.98;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.114.182;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 178.17.170.144;
@@ -267,7 +268,6 @@ set_real_ip_from 185.146.232.234;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
@@ -353,12 +353,10 @@ set_real_ip_from 185.220.101.161;
 set_real_ip_from 185.220.101.162;
 set_real_ip_from 185.220.101.163;
 set_real_ip_from 185.220.101.164;
-set_real_ip_from 185.220.101.165;
 set_real_ip_from 185.220.101.168;
 set_real_ip_from 185.220.101.169;
 set_real_ip_from 185.220.101.17;
 set_real_ip_from 185.220.101.170;
-set_real_ip_from 185.220.101.171;
 set_real_ip_from 185.220.101.172;
 set_real_ip_from 185.220.101.173;
 set_real_ip_from 185.220.101.174;
@@ -623,7 +621,7 @@ set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
-set_real_ip_from 195.47.238.89;
+set_real_ip_from 195.47.238.92;
 set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
@@ -953,6 +951,7 @@ set_real_ip_from 23.129.64.230;
 set_real_ip_from 23.137.248.100;
 set_real_ip_from 23.137.248.149;
 set_real_ip_from 23.137.248.152;
+set_real_ip_from 23.137.249.195;
 set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.108;
 set_real_ip_from 23.137.253.27;
@@ -1014,6 +1013,7 @@ set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
+set_real_ip_from 2602:fc24:11:ca18::1;
 set_real_ip_from 2602:fc24:12:3f11:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
@@ -1275,6 +1275,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe96:7671;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
@@ -1428,11 +1429,9 @@ set_real_ip_from 2a0b:f4c2:1::161;
 set_real_ip_from 2a0b:f4c2:1::162;
 set_real_ip_from 2a0b:f4c2:1::163;
 set_real_ip_from 2a0b:f4c2:1::164;
-set_real_ip_from 2a0b:f4c2:1::165;
 set_real_ip_from 2a0b:f4c2:1::168;
 set_real_ip_from 2a0b:f4c2:1::169;
 set_real_ip_from 2a0b:f4c2:1::170;
-set_real_ip_from 2a0b:f4c2:1::171;
 set_real_ip_from 2a0b:f4c2:1::172;
 set_real_ip_from 2a0b:f4c2:1::173;
 set_real_ip_from 2a0b:f4c2:1::174;
@@ -1550,8 +1549,8 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
@@ -1768,7 +1767,6 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
