--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -44,6 +44,7 @@ set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.167;
 set_real_ip_from 107.189.1.175;
 set_real_ip_from 107.189.12.3;
+set_real_ip_from 107.189.12.7;
 set_real_ip_from 107.189.12.88;
 set_real_ip_from 107.189.13.180;
 set_real_ip_from 107.189.13.251;
@@ -120,7 +121,6 @@ set_real_ip_from 141.11.25.44;
 set_real_ip_from 141.98.11.62;
 set_real_ip_from 142.171.12.88;
 set_real_ip_from 142.44.234.69;
-set_real_ip_from 143.110.156.176;
 set_real_ip_from 144.172.118.4;
 set_real_ip_from 144.172.118.55;
 set_real_ip_from 144.172.118.73;
@@ -140,6 +140,7 @@ set_real_ip_from 154.213.185.183;
 set_real_ip_from 154.213.185.185;
 set_real_ip_from 154.213.185.230;
 set_real_ip_from 154.213.185.254;
+set_real_ip_from 154.213.186.70;
 set_real_ip_from 154.213.187.66;
 set_real_ip_from 154.213.187.98;
 set_real_ip_from 154.26.159.157;
@@ -194,6 +195,7 @@ set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.97.114.182;
 set_real_ip_from 176.97.114.202;
+set_real_ip_from 177.149.135.148;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
@@ -621,8 +623,7 @@ set_real_ip_from 195.47.238.83;
 set_real_ip_from 195.47.238.84;
 set_real_ip_from 195.47.238.86;
 set_real_ip_from 195.47.238.87;
-set_real_ip_from 195.47.238.92;
-set_real_ip_from 195.47.238.93;
+set_real_ip_from 195.47.238.88;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 198.251.84.163;
@@ -1354,6 +1355,7 @@ set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
+set_real_ip_from 2a05:b0c7:6e37::1;
 set_real_ip_from 2a06:1280:bee1:2::ee12:230;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
@@ -1549,8 +1551,7 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
+set_real_ip_from 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
@@ -1674,7 +1675,6 @@ set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
-set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
@@ -1803,7 +1803,6 @@ set_real_ip_from 5.79.66.19;
 set_real_ip_from 62.171.137.169;
 set_real_ip_from 62.182.83.179;
 set_real_ip_from 62.182.84.146;
-set_real_ip_from 64.227.115.78;
 set_real_ip_from 65.87.7.42;
 set_real_ip_from 66.146.193.33;
 set_real_ip_from 66.220.242.222;
