--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -623,7 +623,8 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.88;
+deny 195.47.238.90;
+deny 195.47.238.91;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -1551,6 +1552,8 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
@@ -1767,6 +1770,7 @@ deny 51.89.153.112;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
