Update lists at 20241127-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -178,6 +178,7 @@ allow 172.104.243.155;
 allow 172.104.248.232;
 allow 172.105.161.162;
 allow 172.234.228.174;
+allow 172.234.254.50;
 allow 172.81.131.110;
 allow 172.81.131.111;
 allow 172.81.131.139;
@@ -624,7 +625,7 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.89;
-allow 195.47.238.91;
+allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -807,6 +808,7 @@ allow 204.8.96.144;
 allow 204.8.96.145;
 allow 204.8.96.146;
 allow 204.8.96.147;
+allow 204.8.96.148;
 allow 204.8.96.149;
 allow 204.8.96.150;
 allow 204.8.96.151;
@@ -844,10 +846,12 @@ allow 204.8.96.182;
 allow 204.8.96.183;
 allow 204.8.96.184;
 allow 204.8.96.185;
+allow 204.8.96.186;
 allow 204.8.96.187;
 allow 204.8.96.188;
 allow 204.8.96.189;
 allow 204.8.96.64;
+allow 204.8.96.65;
 allow 204.8.96.66;
 allow 204.8.96.67;
 allow 204.8.96.68;
@@ -867,6 +871,7 @@ allow 204.8.96.81;
 allow 204.8.96.82;
 allow 204.8.96.83;
 allow 204.8.96.84;
+allow 204.8.96.85;
 allow 204.8.96.86;
 allow 204.8.96.87;
 allow 204.8.96.88;
@@ -905,6 +910,7 @@ allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
 allow 217.12.221.131;
+allow 217.64.151.21;
 allow 217.79.189.239;
 allow 23.129.64.131;
 allow 23.129.64.132;
@@ -962,7 +968,6 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
-allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -986,7 +991,6 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
@@ -1009,6 +1013,7 @@ allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
+allow 2600:3c0a::f03c:95ff:fedb:e610;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
@@ -1189,6 +1194,7 @@ allow 2620:7:6001::144;
 allow 2620:7:6001::145;
 allow 2620:7:6001::146;
 allow 2620:7:6001::147;
+allow 2620:7:6001::148;
 allow 2620:7:6001::149;
 allow 2620:7:6001::150;
 allow 2620:7:6001::151;
@@ -1226,11 +1232,13 @@ allow 2620:7:6001::182;
 allow 2620:7:6001::183;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
+allow 2620:7:6001::186;
 allow 2620:7:6001::187;
 allow 2620:7:6001::188;
 allow 2620:7:6001::189;
 allow 2620:7:6001::e664;
 allow 2620:7:6001::ffff:c759:e640;
+allow 2620:7:6001::ffff:c759:e641;
 allow 2620:7:6001::ffff:c759:e642;
 allow 2620:7:6001::ffff:c759:e643;
 allow 2620:7:6001::ffff:c759:e644;
@@ -1250,6 +1258,7 @@ allow 2620:7:6001::ffff:c759:e651;
 allow 2620:7:6001::ffff:c759:e652;
 allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
+allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
 allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
@@ -1549,7 +1558,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5cc0:1:1::293c:1518;
@@ -1602,7 +1611,9 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
+allow 2a10:1fc0:10::b919:4e1;
 allow 2a10:1fc0:10::c5e8:64c6;
+allow 2a10:1fc0:10::debc:26b9;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1674,8 +1685,6 @@ allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
-allow 45.129.84.247;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1891,6 +1900,8 @@ allow 91.208.75.4;
 allow 91.210.59.188;
 allow 91.219.236.101;
 allow 91.219.237.39;
+allow 91.227.77.250;
+allow 91.227.77.46;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.223.2.140;
