--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -121,6 +121,7 @@ allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
+allow 2600:3c0a::f03c:95ff:fedb:e610;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
@@ -301,6 +302,7 @@ allow 2620:7:6001::144;
 allow 2620:7:6001::145;
 allow 2620:7:6001::146;
 allow 2620:7:6001::147;
+allow 2620:7:6001::148;
 allow 2620:7:6001::149;
 allow 2620:7:6001::150;
 allow 2620:7:6001::151;
@@ -338,11 +340,13 @@ allow 2620:7:6001::182;
 allow 2620:7:6001::183;
 allow 2620:7:6001::184;
 allow 2620:7:6001::185;
+allow 2620:7:6001::186;
 allow 2620:7:6001::187;
 allow 2620:7:6001::188;
 allow 2620:7:6001::189;
 allow 2620:7:6001::e664;
 allow 2620:7:6001::ffff:c759:e640;
+allow 2620:7:6001::ffff:c759:e641;
 allow 2620:7:6001::ffff:c759:e642;
 allow 2620:7:6001::ffff:c759:e643;
 allow 2620:7:6001::ffff:c759:e644;
@@ -362,6 +366,7 @@ allow 2620:7:6001::ffff:c759:e651;
 allow 2620:7:6001::ffff:c759:e652;
 allow 2620:7:6001::ffff:c759:e653;
 allow 2620:7:6001::ffff:c759:e654;
+allow 2620:7:6001::ffff:c759:e655;
 allow 2620:7:6001::ffff:c759:e656;
 allow 2620:7:6001::ffff:c759:e657;
 allow 2620:7:6001::ffff:c759:e658;
@@ -660,7 +665,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5cc0:1:1::293c:1518;
@@ -713,7 +718,9 @@ allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
+allow 2a10:1fc0:10::b919:4e1;
 allow 2a10:1fc0:10::c5e8:64c6;
+allow 2a10:1fc0:10::debc:26b9;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
