--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -271,6 +271,7 @@ deny 185.146.232.234;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
+deny 185.165.169.42;
 deny 185.165.171.14;
 deny 185.165.171.84;
 deny 185.170.114.25;
@@ -623,8 +624,7 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.92;
-deny 195.47.238.93;
+deny 195.47.238.88;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -1347,6 +1347,7 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
+deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -1560,8 +1561,6 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
-deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
@@ -1781,6 +1780,7 @@ deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
 deny 5.255.100.26;
+deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
@@ -1940,6 +1940,7 @@ deny 94.232.43.221;
 deny 94.32.66.15;
 deny 94.72.103.33;
 deny 94.72.98.8;
+deny 94.75.225.81;
 deny 95.128.43.164;
 deny 95.142.161.63;
 deny 95.143.193.125;
