Update lists at 20241128-0900

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -455,7 +455,6 @@ deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:105:98a3::1;
-deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:108:a34f::1;
 deny 2a04:52c0:116:e0e3::1;
 deny 2a04:52c0:123:c6c3::1;
@@ -531,7 +530,6 @@ deny 2a0b:f4c2:1::130;
 deny 2a0b:f4c2:1::134;
 deny 2a0b:f4c2:1::135;
 deny 2a0b:f4c2:1::137;
-deny 2a0b:f4c2:1::138;
 deny 2a0b:f4c2:1::139;
 deny 2a0b:f4c2:1::142;
 deny 2a0b:f4c2:1::143;
@@ -669,8 +667,8 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
