--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -139,7 +139,6 @@ allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.186.70;
-allow 154.213.187.66;
 allow 154.213.187.98;
 allow 154.26.159.157;
 allow 158.69.1.13;
@@ -208,7 +207,6 @@ allow 178.218.144.51;
 allow 178.218.144.64;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.31.96.242;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -269,6 +267,7 @@ allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -333,7 +332,6 @@ allow 185.220.101.134;
 allow 185.220.101.135;
 allow 185.220.101.136;
 allow 185.220.101.137;
-allow 185.220.101.138;
 allow 185.220.101.139;
 allow 185.220.101.14;
 allow 185.220.101.142;
@@ -622,7 +620,7 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.89;
+allow 195.47.238.92;
 allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
@@ -903,7 +901,6 @@ allow 213.95.149.22;
 allow 216.239.90.19;
 allow 216.73.159.75;
 allow 217.12.221.131;
-allow 217.64.151.21;
 allow 217.79.189.239;
 allow 23.129.64.131;
 allow 23.129.64.132;
@@ -1343,7 +1340,6 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:98a3::1;
-allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
 allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:123:c6c3::1;
@@ -1419,7 +1415,6 @@ allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::134;
 allow 2a0b:f4c2:1::135;
 allow 2a0b:f4c2:1::137;
-allow 2a0b:f4c2:1::138;
 allow 2a0b:f4c2:1::139;
 allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
@@ -1557,8 +1552,8 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
-allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1774,7 +1769,6 @@ allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
 allow 5.255.100.26;
-allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
