Update lists at 20241128-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -184,7 +184,6 @@ allow 172.81.132.94;
 allow 173.237.206.68;
 allow 173.249.57.253;
 allow 173.255.198.243;
-allow 173.44.141.34;
 allow 176.118.193.33;
 allow 176.121.81.51;
 allow 176.227.215.50;
@@ -197,7 +196,6 @@ allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
-allow 178.175.131.141;
 allow 178.175.148.209;
 allow 178.175.148.246;
 allow 178.20.55.16;
@@ -267,7 +265,6 @@ allow 185.146.232.234;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -621,7 +618,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.88;
+allow 195.47.238.90;
+allow 195.47.238.91;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1389,7 +1387,6 @@ allow 2a09:61c0::beef;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0a:c801:1:5::57;
 allow 2a0b:4140:6c6c::2;
-allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1553,6 +1550,8 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
@@ -1577,6 +1576,8 @@ allow 2a0e:b107:dd0::3:ed78:7632;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
+allow 2a0f:85c1:356:3238::1;
+allow 2a0f:85c1:356:596c::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1653,7 +1654,6 @@ allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
-allow 31.13.195.22;
 allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.135;
@@ -1707,7 +1707,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.14.165.118;
 allow 45.148.10.111;
 allow 45.148.10.169;
 allow 45.149.204.78;
@@ -1803,8 +1802,10 @@ allow 5.79.66.19;
 allow 62.171.137.169;
 allow 62.182.83.179;
 allow 62.182.84.146;
+allow 65.87.7.42;
 allow 66.146.193.33;
 allow 66.220.242.222;
+allow 66.78.40.182;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
@@ -1920,7 +1921,6 @@ allow 94.228.163.25;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.232.43.221;
-allow 94.32.66.15;
 allow 94.72.103.33;
 allow 94.72.98.8;
 allow 94.75.225.81;
