--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -184,7 +184,6 @@ deny 172.81.132.94;
 deny 173.237.206.68;
 deny 173.249.57.253;
 deny 173.255.198.243;
-deny 173.44.141.34;
 deny 176.118.193.33;
 deny 176.121.81.51;
 deny 176.227.215.50;
@@ -197,7 +196,6 @@ deny 178.17.170.23;
 deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
-deny 178.175.131.141;
 deny 178.175.148.209;
 deny 178.175.148.246;
 deny 178.20.55.16;
@@ -267,7 +265,6 @@ deny 185.146.232.234;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.14;
 deny 185.165.171.84;
 deny 185.170.114.25;
@@ -621,7 +618,8 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.88;
+deny 195.47.238.90;
+deny 195.47.238.91;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -1389,7 +1387,6 @@ deny 2a09:61c0::beef;
 deny 2a0a:3840:8078:22:0:504e:16da:1337;
 deny 2a0a:c801:1:5::57;
 deny 2a0b:4140:6c6c::2;
-deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -1553,6 +1550,8 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
@@ -1577,6 +1576,8 @@ deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
+deny 2a0f:85c1:356:3238::1;
+deny 2a0f:85c1:356:596c::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1653,7 +1654,6 @@ deny 2a12:bec4:11d3:4a89::1;
 deny 2a12:d8c0:109a:9001::7;
 deny 2a13:d207:0:461::1;
 deny 31.129.22.65;
-deny 31.13.195.22;
 deny 31.133.0.210;
 deny 31.220.75.237;
 deny 31.42.185.135;
@@ -1707,7 +1707,6 @@ deny 45.141.215.88;
 deny 45.141.215.90;
 deny 45.141.215.95;
 deny 45.141.215.97;
-deny 45.14.165.118;
 deny 45.148.10.111;
 deny 45.148.10.169;
 deny 45.149.204.78;
@@ -1803,8 +1802,10 @@ deny 5.79.66.19;
 deny 62.171.137.169;
 deny 62.182.83.179;
 deny 62.182.84.146;
+deny 65.87.7.42;
 deny 66.146.193.33;
 deny 66.220.242.222;
+deny 66.78.40.182;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
@@ -1920,7 +1921,6 @@ deny 94.228.163.25;
 deny 94.230.208.147;
 deny 94.230.208.148;
 deny 94.232.43.221;
-deny 94.32.66.15;
 deny 94.72.103.33;
 deny 94.72.98.8;
 deny 94.75.225.81;
