--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.126.161.54;
 allow 103.163.218.11;
 allow 103.164.54.199;
 allow 103.196.37.111;
+allow 103.208.86.5;
 allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
@@ -35,6 +36,7 @@ allow 104.244.79.61;
 allow 104.254.90.187;
 allow 107.172.31.218;
 allow 107.174.138.172;
+allow 107.174.34.30;
 allow 107.189.10.175;
 allow 107.189.11.111;
 allow 107.189.11.113;
@@ -337,7 +339,6 @@ allow 185.220.101.142;
 allow 185.220.101.143;
 allow 185.220.101.145;
 allow 185.220.101.147;
-allow 185.220.101.148;
 allow 185.220.101.149;
 allow 185.220.101.15;
 allow 185.220.101.151;
@@ -361,7 +362,6 @@ allow 185.220.101.174;
 allow 185.220.101.175;
 allow 185.220.101.176;
 allow 185.220.101.177;
-allow 185.220.101.178;
 allow 185.220.101.179;
 allow 185.220.101.18;
 allow 185.220.101.182;
@@ -620,7 +620,7 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.89;
-allow 195.47.238.91;
+allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -955,6 +955,7 @@ allow 23.153.248.33;
 allow 23.153.248.34;
 allow 23.154.177.10;
 allow 23.154.177.11;
+allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
@@ -985,6 +986,7 @@ allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
+allow 23.184.48.48;
 allow 23.184.48.78;
 allow 23.94.211.25;
 allow 2400:d320:2202:5765::1;
@@ -1013,6 +1015,7 @@ allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:30d2::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::dead;
@@ -1279,7 +1282,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe96:7671;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:29b8:dc01:3750::b94;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
@@ -1358,6 +1360,7 @@ allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a05:b0c7:6e37::1;
+allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
@@ -1419,7 +1422,6 @@ allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
 allow 2a0b:f4c2:1::145;
 allow 2a0b:f4c2:1::147;
-allow 2a0b:f4c2:1::148;
 allow 2a0b:f4c2:1::149;
 allow 2a0b:f4c2:1::151;
 allow 2a0b:f4c2:1::154;
@@ -1440,7 +1442,6 @@ allow 2a0b:f4c2:1::174;
 allow 2a0b:f4c2:1::175;
 allow 2a0b:f4c2:1::176;
 allow 2a0b:f4c2:1::177;
-allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
@@ -1551,7 +1552,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5cc0:1:1::293c:1518;
@@ -1676,6 +1677,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1730,6 +1732,7 @@ allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
 allow 45.83.104.137;
+allow 45.83.21.193;
 allow 45.84.107.108;
 allow 45.84.107.182;
 allow 45.84.107.198;
@@ -1745,7 +1748,6 @@ allow 45.95.169.228;
 allow 45.95.169.229;
 allow 45.95.169.255;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 47.243.99.161;
