--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -130,6 +130,7 @@ allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:30d2::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::dead;
@@ -395,7 +396,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe96:7671;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:29b8:dc01:3750::b94;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
@@ -474,6 +474,7 @@ allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
 allow 2a05:b0c7:6e37::1;
+allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
 allow 2a06:1700:0:12::3;
@@ -535,7 +536,6 @@ allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
 allow 2a0b:f4c2:1::145;
 allow 2a0b:f4c2:1::147;
-allow 2a0b:f4c2:1::148;
 allow 2a0b:f4c2:1::149;
 allow 2a0b:f4c2:1::151;
 allow 2a0b:f4c2:1::154;
@@ -556,7 +556,6 @@ allow 2a0b:f4c2:1::174;
 allow 2a0b:f4c2:1::175;
 allow 2a0b:f4c2:1::176;
 allow 2a0b:f4c2:1::177;
-allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
@@ -667,7 +666,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
+allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 allow 2a0c:5cc0:1:1::293c:1518;
