Update lists at 20241129-0301

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -530,7 +530,6 @@ allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::134;
 allow 2a0b:f4c2:1::135;
-allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::139;
 allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
@@ -666,9 +665,10 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
+allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
@@ -711,6 +711,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
+allow 2a0f:e586:f:f:8d42:1ac8:4135:accd;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
