--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -332,7 +332,6 @@ allow 185.220.101.131;
 allow 185.220.101.134;
 allow 185.220.101.135;
 allow 185.220.101.136;
-allow 185.220.101.137;
 allow 185.220.101.139;
 allow 185.220.101.14;
 allow 185.220.101.142;
@@ -466,6 +465,7 @@ allow 185.225.69.203;
 allow 185.225.69.232;
 allow 185.227.134.106;
 allow 185.227.68.78;
+allow 185.231.102.51;
 allow 185.233.100.23;
 allow 185.241.208.115;
 allow 185.241.208.202;
@@ -597,10 +597,12 @@ allow 193.218.118.173;
 allow 193.218.118.178;
 allow 193.218.118.182;
 allow 193.218.118.188;
+allow 193.218.118.72;
 allow 193.218.118.89;
 allow 193.239.232.102;
 allow 193.26.115.43;
 allow 193.26.115.61;
+allow 193.32.162.96;
 allow 193.36.132.21;
 allow 193.41.226.117;
 allow 193.70.80.213;
@@ -620,7 +622,7 @@ allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
 allow 195.47.238.89;
-allow 195.47.238.93;
+allow 195.47.238.92;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1416,7 +1418,6 @@ allow 2a0b:f4c2:1::129;
 allow 2a0b:f4c2:1::130;
 allow 2a0b:f4c2:1::134;
 allow 2a0b:f4c2:1::135;
-allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::139;
 allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
@@ -1552,9 +1553,10 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
+allow 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 allow 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 allow 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
@@ -1597,6 +1599,7 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a0f:e586:f:f::188;
+allow 2a0f:e586:f:f:8d42:1ac8:4135:accd;
 allow 2a0f:e586:f:f:a052:2166:bef9:a432;
 allow 2a0f:e586:f:f:baa4:d491:90be:dca5;
 allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1770,6 +1773,7 @@ allow 51.89.153.112;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
