--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -332,7 +332,6 @@ deny 185.220.101.131;
 deny 185.220.101.134;
 deny 185.220.101.135;
 deny 185.220.101.136;
-deny 185.220.101.137;
 deny 185.220.101.139;
 deny 185.220.101.14;
 deny 185.220.101.142;
@@ -466,6 +465,7 @@ deny 185.225.69.203;
 deny 185.225.69.232;
 deny 185.227.134.106;
 deny 185.227.68.78;
+deny 185.231.102.51;
 deny 185.233.100.23;
 deny 185.241.208.115;
 deny 185.241.208.202;
@@ -597,10 +597,12 @@ deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
 deny 193.218.118.188;
+deny 193.218.118.72;
 deny 193.218.118.89;
 deny 193.239.232.102;
 deny 193.26.115.43;
 deny 193.26.115.61;
+deny 193.32.162.96;
 deny 193.36.132.21;
 deny 193.41.226.117;
 deny 193.70.80.213;
@@ -620,7 +622,7 @@ deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
 deny 195.47.238.89;
-deny 195.47.238.93;
+deny 195.47.238.92;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -1416,7 +1418,6 @@ deny 2a0b:f4c2:1::129;
 deny 2a0b:f4c2:1::130;
 deny 2a0b:f4c2:1::134;
 deny 2a0b:f4c2:1::135;
-deny 2a0b:f4c2:1::137;
 deny 2a0b:f4c2:1::139;
 deny 2a0b:f4c2:1::142;
 deny 2a0b:f4c2:1::143;
@@ -1552,9 +1553,10 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
-deny 2a0c:5700:3133:1705:be24:11ff:fe37:3cb;
+deny 2a0c:5700:3133:1705:be24:11ff:fe0f:9e53;
 deny 2a0c:5700:3133:1705:be24:11ff:fead:5be0;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
+deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
@@ -1597,6 +1599,7 @@ deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::133;
 deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
+deny 2a0f:e586:f:f:8d42:1ac8:4135:accd;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1770,6 +1773,7 @@ deny 51.89.153.112;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.103.235;
 deny 5.255.104.202;
 deny 5.255.111.64;
