Update lists at 20241129-0900

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -264,7 +264,6 @@ deny 185.146.232.234;
 deny 185.154.110.142;
 deny 185.154.110.17;
 deny 185.165.169.239;
-deny 185.165.169.42;
 deny 185.165.171.14;
 deny 185.165.171.84;
 deny 185.170.114.25;
@@ -617,7 +616,8 @@ deny 195.47.238.83;
 deny 195.47.238.84;
 deny 195.47.238.86;
 deny 195.47.238.87;
-deny 195.47.238.88;
+deny 195.47.238.90;
+deny 195.47.238.91;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 198.251.84.163;
@@ -945,6 +945,7 @@ deny 23.129.64.230;
 deny 23.137.248.100;
 deny 23.137.248.149;
 deny 23.137.248.152;
+deny 23.137.249.195;
 deny 23.137.250.83;
 deny 23.137.253.108;
 deny 23.137.253.27;
@@ -978,7 +979,6 @@ deny 23.154.177.4;
 deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
-deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.8.104;
@@ -1008,6 +1008,7 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
+deny 2602:fc24:11:ca18::1;
 deny 2602:fc24:12:3f11:39ca:318:0:1;
 deny 2602:fc24:12:4870:39ca:318:0:1;
 deny 2602:fc24:12:81a6::1;
@@ -1544,6 +1545,8 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
@@ -1668,7 +1671,6 @@ deny 45.11.59.28;
 deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
-deny 45.129.84.247;
 deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
@@ -1716,7 +1718,6 @@ deny 45.66.35.20;
 deny 45.66.35.21;
 deny 45.66.35.22;
 deny 45.66.35.35;
-deny 45.78.44.215;
 deny 45.79.144.222;
 deny 45.80.158.205;
 deny 45.80.158.23;
@@ -1724,6 +1725,7 @@ deny 45.80.158.27;
 deny 45.80.158.69;
 deny 45.8.22.207;
 deny 45.83.104.137;
+deny 45.83.21.193;
 deny 45.84.107.108;
 deny 45.84.107.182;
 deny 45.84.107.198;
