--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -126,6 +126,7 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
+deny 2602:fc24:11:ca18::1;
 deny 2602:fc24:12:3f11:39ca:318:0:1;
 deny 2602:fc24:12:4870:39ca:318:0:1;
 deny 2602:fc24:12:81a6::1;
@@ -661,6 +662,8 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5700:3133:1705:be24:11ff:fe4e:df9e;
+deny 2a0c:5700:3133:1705:be24:11ff:fe87:1bec;
 deny 2a0c:5700:3133:1705:be24:11ff:feb6:9942;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
