Update lists at 20241130-0001

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -598,7 +598,6 @@ allow 193.218.118.188;
 allow 193.218.118.72;
 allow 193.218.118.89;
 allow 193.239.232.102;
-allow 193.26.115.43;
 allow 193.26.115.61;
 allow 193.32.162.96;
 allow 193.36.132.21;
@@ -958,7 +957,6 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
-allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -984,7 +982,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
-allow 23.155.8.104;
 allow 23.173.216.67;
 allow 23.184.48.48;
 allow 23.184.48.78;
@@ -1009,7 +1006,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:11:ca18::1;
 allow 2602:fc24:12:3f11:39ca:318:0:1;
@@ -1577,6 +1573,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:596c::1;
+allow 2a0f:85c1:356:5da3::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1670,7 +1667,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.247;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.138.16.107;
@@ -1800,6 +1796,7 @@ allow 65.87.7.42;
 allow 66.146.193.33;
 allow 66.220.242.222;
 allow 66.78.40.182;
+allow 66.78.40.65;
 allow 67.219.109.141;
 allow 71.19.144.106;
 allow 71.19.144.222;
@@ -1835,7 +1832,6 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
-allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 85.239.41.130;
