--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -598,7 +598,6 @@ deny 193.218.118.188;
 deny 193.218.118.72;
 deny 193.218.118.89;
 deny 193.239.232.102;
-deny 193.26.115.43;
 deny 193.26.115.61;
 deny 193.32.162.96;
 deny 193.36.132.21;
@@ -958,7 +957,6 @@ deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
 deny 23.154.177.14;
-deny 23.154.177.15;
 deny 23.154.177.16;
 deny 23.154.177.17;
 deny 23.154.177.18;
@@ -984,7 +982,6 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.4;
-deny 23.155.8.104;
 deny 23.173.216.67;
 deny 23.184.48.48;
 deny 23.184.48.78;
@@ -1009,7 +1006,6 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
 deny 2602:fc24:11:ca18::1;
 deny 2602:fc24:12:3f11:39ca:318:0:1;
@@ -1577,6 +1573,7 @@ deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:596c::1;
+deny 2a0f:85c1:356:5da3::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -1670,7 +1667,6 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.247;
-deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
 deny 45.138.16.107;
@@ -1800,6 +1796,7 @@ deny 65.87.7.42;
 deny 66.146.193.33;
 deny 66.220.242.222;
 deny 66.78.40.182;
+deny 66.78.40.65;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 71.19.144.222;
@@ -1835,7 +1832,6 @@ deny 83.217.9.73;
 deny 83.96.213.63;
 deny 83.97.20.77;
 deny 84.16.224.227;
-deny 84.211.226.13;
 deny 84.239.46.144;
 deny 84.247.165.51;
 deny 85.239.41.130;
